# nodal

./: .gitattributes  README.md  nodal.py  pyproject.toml  solver.py  tests.py
doc/: 1.6.1.csv  buffer.csv  netlist.csv  opmodel_amplifier.csv  opmodel_voltage_buffer.csv  resistive_1.csv  resistive_2.csv  resistive_3.csv  test_1.csv  unconnected_0.csv  unconnected_1.csv
nodal/: __init__.py  constants.py  equiv.py  models.py  nodal.py  solver.py
